--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -17,13 +17,13 @@
   .left-section h1 {
     font-size: 5rem;
     font-weight: bold;
-    color: #333;
+    color: black;
     margin-bottom: 20px;
   }
   
   .left-section p {
     font-size: 1.2rem;
-    color: #555;
+    color: black;
     margin-bottom: 30px;
     line-height: 1.6;
   }
