--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -78,6 +78,37 @@
     height: auto;
     border-radius: 10px;
   }
+
+.light-grey-section {
+    background-color: #f0f0f0;
+    padding: 50px;
+    text-align: center;
+  }
+  
+  .grey-section-text {
+    font-size: 1.5rem;
+    color: black;
+    margin-bottom: 30px;
+    font-weight: bold;
+  }
+  
+  .logo-row {
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+    flex-wrap: wrap; 
+  }
+  
+  .logo {
+    width: 80px;
+    height: 70px;
+    transition: filter 0.3s ease;
+  }
+  
+  .logo:hover {
+    filter: grayscale(0%);
+  }
+  
   
   @media (max-width: 768px) {
     .main-body {
@@ -93,5 +124,12 @@
     .right-section .right-image {
       width: 80%; 
     }
+    .logo-row {
+        gap: 15px;
+      }
   }
+
+    
+  
+ 
   
