--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -132,8 +132,9 @@
 .blue-section {
   display: flex;
   width: 1400px;
-  height: 1000px;
-  background-color: pink;
+  height: auto;
+  /* background-color: pink; */
+  background-color:#f2f5fa ;
   border: 1px solid #f2f5fa;
   border-radius: 10px;
   margin-top: 30px;
@@ -143,10 +144,11 @@
 
 .leftsection {
   width: 20%;
-  height: 1000px;
+  height: auto;
   border: 1px solid #f2f5fa;
   border-radius: 10px;
-  background-color: aquamarine;
+  background-color:#f2f5fa ;
+  /* background-color: aquamarine; */
 }
 
 .joinBtn {
@@ -164,16 +166,130 @@
 
 .rightsection {
   width: 80%;
-  height: 1000px;
-  background-color: plum;
+  height: auto;
+  /* background-color: plum; */
+  background-color:#f2f5fa ;
   border: 1px solid #f2f5fa;
   border-radius: 10px;
 }
 
-.choose{
+.choose {
   margin-top: 100px;
   margin-left: 50px;
 }
-.chooseText{
+.chooseText {
   margin-left: 50px;
+}
+
+.beginner {
+  margin-top: 20px;
+  width: 100px;
+  color: black;
+  border: 1px solid #5b6780;
+  padding: 8px 20px;
+  border-radius: 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-left: 50px;
+}
+
+.popular {
+  background-color: #5b6780;
+  width: 100px;
+  color: white;
+  border: 1px solid #5b6780;
+  padding: 8px 20px;
+  border-radius: 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.soft {
+  width: 250px;
+  color: black;
+  border: 1px solid #5b6780;
+  padding: 8px 20px;
+  border-radius: 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-left: 5px;
+  margin-top: 20px;
+}
+
+.business {
+  width: 100px;
+  color: black;
+  border: 1px solid #5b6780;
+  padding: 8px 20px;
+  border-radius: 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-left: 5px;
+  margin-top: 20px;
+}
+
+.sales {
+  width: 175px;
+  color: black;
+  border: 1px solid #5b6780;
+  padding: 8px 20px;
+  border-radius: 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-left: 5px;
+  margin-top: 20px;
+}
+
+.data {
+  width: 230px;
+  color: black;
+  border: 1px solid #5b6780;
+  padding: 8px 20px;
+  border-radius: 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-left: 5px;
+  margin-top: 20px;
+}
+
+.span {
+  margin-left: 15px;
+  margin-top: 20px;
+  color: #5b6780;
+}
+
+.cards-section {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  margin-top: 20px;
+  margin-left: 50px;
+}
+
+.card {
+  width: 100%;
+  max-width: 300px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  text-align: center;
+}
+
+.card img {
+  width: 100%;
+  max-height: 200px;
+  object-fit: cover;
+}
+
+.card h3 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.card p {
+  font-size: 1rem;
+  color: #333;
 }
