--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -132,9 +132,9 @@
 .blue-section {
   display: flex;
   width: 1400px;
-  height: auto;
+  height: 550px;
   /* background-color: pink; */
-  background-color:#f2f5fa ;
+  background-color: #f2f5fa;
   border: 1px solid #f2f5fa;
   border-radius: 10px;
   margin-top: 30px;
@@ -147,7 +147,7 @@
   height: auto;
   border: 1px solid #f2f5fa;
   border-radius: 10px;
-  background-color:#f2f5fa ;
+  background-color: #f2f5fa;
   /* background-color: aquamarine; */
 }
 
@@ -168,7 +168,7 @@
   width: 80%;
   height: auto;
   /* background-color: plum; */
-  background-color:#f2f5fa ;
+  background-color: #f2f5fa;
   border: 1px solid #f2f5fa;
   border-radius: 10px;
 }
@@ -260,14 +260,6 @@
   color: #5b6780;
 }
 
-.cards-section {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-  margin-top: 20px;
-  margin-left: 50px;
-}
-
 .card {
   width: 100%;
   max-width: 300px;
@@ -276,6 +268,29 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
   text-align: center;
+}
+
+/* Cards Section */
+.cards-section {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+/* Card Styling */
+.cards-section .card {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* Hover Effect */
+.cards-section .card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
 }
 
 .card img {
@@ -292,4 +307,23 @@
 .card p {
   font-size: 1rem;
   color: #333;
+}
+
+/* styling section */
+.spec{
+  margin-left: 60px;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.most{
+  margin-left: 60px;
+  font-size: 2.5rem;
+  line-height: 0%;
+}
+
+.explore{
+  margin-left: 60px;
+  font-size: 1.2rem;
+  line-height: 0%;
 }
