--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -286,8 +286,6 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-
-/* Hover Effect */
 .cards-section .card:hover {
   transform: translateY(-10px);
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
@@ -309,7 +307,6 @@
   color: #333;
 }
 
-/* styling section */
 .spec {
   margin-left: 60px;
   font-size: 1.5rem;
@@ -357,7 +354,7 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  text-align: left; /* Align card content to the left */
+  text-align: left;
   position: relative;
 }
 
@@ -371,7 +368,7 @@
 }
 
 .card-content {
-  padding: 10px 0; /* Add some spacing above and below the text */
+  padding: 10px 0;
 }
 
 .newmainText {
@@ -390,4 +387,54 @@
   margin: 0;
   font-size: 0.9em;
   color: #888;
+}
+
+/* Buttons Container */
+.buttons-container {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+  margin-left: 60px;
+}
+
+.blue-btn {
+  background-color: rgb(0, 86, 210);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.blue-btn:hover {
+  background-color: #0056b3;
+}
+
+/* Outline Button */
+.outline-btn {
+  background-color: #fff;
+  color: rgb(0, 86, 210);
+  border: 2px solid rgb(0, 86, 210);
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  position: relative;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.outline-btn:hover {
+  background-color: #e6f2ff;
+  color: #0056b3;
+}
+
+.arrow {
+  margin-left: 10px;
+  transition: color 0.3s ease;
+}
+
+.outline-btn:hover .arrow {
+  color: #0056b3;
 }
