--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -521,7 +521,7 @@
   height: 500px;
   /* background-color: #0056b3; */
 }
-.blueleftchildimg{
+.blueleftchildimg {
   margin-left: 60px;
 }
 
@@ -531,22 +531,96 @@
   /* background-color: #5b6780; */
   align-items: center;
 }
-.learners{
+.learners {
   margin-top: 150px;
   font-size: 3rem;
   font-weight: bold;
 }
-.learnersreport{
+.learnersreport {
   font-size: 1.5rem;
 }
-.learnersreportspan{
+.learnersreportspan {
   font-weight: 500;
   font-size: 1.5rem;
 }
-.learnersreport a{
- font-size: 1.5rem;
- color: rgb(0, 86, 210);
+.learnersreport a {
+  font-size: 1.5rem;
+  color: rgb(0, 86, 210);
 }
-.blueparentbtn{
+.blueparentbtn {
   margin-left: -2px;
+}
+
+.belowBlueParentTextDiv {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  text-align: center;
+}
+.belowBlueParentTextP1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  line-height: 0%;
+}
+
+.belowBlueParentTextP2 {
+  font-size: 1.5rem;
+}
+
+/* Coursera community section styling */
+
+.courseraCommunitySection {
+  display: flex;
+  width: 100%;
+  height: 650px;
+  /* background-color: pink; */
+}
+.courseraCommunitySubSection {
+  margin-left: 2.5%;
+  width: 30%;
+  height: 650px;
+  /* background-color: blueviolet; */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.circularimg {
+  border: 1px solid #0056b3;
+  border-radius: 50%;
+  background-color: #0056b3;
+  width: 200px;
+  height: 200px;
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-align: center;
+}
+.courseraCommunitySectionP1 {
+  color: rgb(56, 45, 139);
+  font-size: 28px;
+  font-weight: 600;
+}
+.courseraCommunitySectionP2 {
+  color: rgb(31, 31, 31);
+  font-size: 16px;
+}
+.courseracommunityline {
+  border: 1px solid rgb(42, 115, 204);
+  width: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  transform: translate(
+    310%
+  ); /* Offsets the div back by half its width and height */
+}
+
+.courseraCommunitySectionP3 {
+  color: rgb(31, 31, 31);
+  font-size: 20px;
 }
